# ROLI-Map-App

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml  requirements.txt  styles.css
Code/: boundaries_cleaning.py  boundary_simplification.py  data-join.py
Data/: MSI_data.csv  ROLI_data.xlsx  Territories_EC.xlsx  Territories_WB.xlsx  data4app.csv
src/utils/: data_adds.py  passcheck.py
