[project]
name = "roli-map-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "xlsxwriter>=3.2.9",
]
